2013-01-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (launch_plugin): Fix wrong reference. name was
	truncated in rare cases.

2013-01-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Add support for proxy authentication.
	Patch submitted by Christian Schmidt.

2013-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Third part towards clean separation of NVTI into the NVTI Cache:
	Copyies are returned, so these need to be free'd.

	* src/nasl_plugins.c (nasl_plugin_add, nasl_plugin_launch): Free the
	nvti object once it is not needed anymore.

	* src/ntp_11.c (_find_plugin): Free the nvti object once it is not
	needed anymore.
	(ntp_1x_send_dependencies): The filename needs to be free'd because
	it was strdup'ed before. Free the nvti object once it is note
	needed anymore.

	* src/attack.c (launch_plugin): We need the oid later on and have
	many exits, so better store it locally without need to free it.
	Free the nvti.

	* src/plugs_hash.c (plugins_send_md5): Free the nvti object.

	* src/oval_plugins.c (oval_plugin_add): Free the nvti object.

	* src/comm.c (send_plug_info): Free the nvti object.

	* src/pluginscheduler.c (hash_add): Free the nvti object.
	(plugins_scheduler_init): Added safety heck for missing OID.

2013-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Second part towards clean separation of NVTI into the NVTI Cache:
	All remaining access to NVTI object via "NVTI" is replaced
	by access via OID.
	The only exception is the parsing code for the description
	block where the OID is not necessarily known at the beginning
	and therefore can not be relied on.

	* src/nasl_plugins.c (nasl_plugin_add): Remove the NVTI object
	after we added it for parsing the NASL file.
	(nasl_plugin_add): Use OID instead of NVTI.
	(nasl_plugin_launch): Use OID instead of NVTI. Fix setting of
	"name" and "preferences".

	* src/ntp_11.c (_find_plugin, ntp_1x_send_dependencies): Use OID